# zippity

./: Cargo.toml  LICENSE  README.md  check_all.sh
.github/workflows/: ci.yml
examples/: web_server.rs  zip_directory.rs
proptest-regressions/: actix_web.txt  builder.txt  bytes.txt  crc_reader.txt  filesystem_entry.txt  lib.txt  reader.txt  zippity.txt
proptest-regressions/integration_tests/: actix_web.txt  external.txt  unzip.txt  unzip_fs.txt
src/: actix_web.rs  actix_web_adapter.rs  builder.rs  bytes.rs  crc_reader.rs  entry_data.rs  error.rs  file_entry.rs  filesystem_entry.rs  lib.rs  proptest.rs  reader.rs  structs.rs  test_util.rs  tokio_file.rs  zippity.rs  zippity_error.rs
src/integration_tests/: actix_web.rs  external.rs  mod.rs  unzip.rs  unzip_fs.rs
src/test_util/: funky_entry_data.rs  mod.rs  test_entry_data.rs
tests/: actix_web.rs  actix_web_adapter.rs  external.proptest-regressions  external.rs  tokio_file.rs  unzip.rs  unzip_fs.rs
zippity/: Cargo.toml
zippity/src/: lib.rs  structs.rs  test_util.rs  vecbuffer.rs
