[package]
name = "zippity"
version = "0.1.0"
edition = "2021"
description = "Library for asynchronously creating a ZIP file on the fly."
repository = "https://github.com/bluecube/zippity"

[features]
default = ["tokio-file"]
tokio-file = ["dep:futures-util", "tokio/fs"]
actix-web = ["dep:actix-web", "dep:bytes", "dep:http-range-header", "dep:tokio-util", "dep:consume_on_drop"]

[dependencies]
actix-web = { version = "4.5.1", default-features = false, optional = true }
assert2 = "0.3.11"
bytes = { version = "1.6.0", optional = true }
consume_on_drop = { git = "https://github.com/bluecube/consume_on_drop.git", branch = "pinning", optional = true }
crc32fast = "1.3.2"
futures-util = { version = "0.3.30", optional = true, default-features = false}
http-range-header = { version = "0.4.0", optional = true }
packed_struct = "0.10.1"
pin-project = "1.1.3"
thiserror = "1.0.53"
tokio = { version = "1.32.0", default-features = false }
tokio-util = { version = "0.7.10", default-features = false, features = ["io"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.3.1"
test-strategy = "0.3.1"
zip = "0.6.6"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "io-util", "macros"] }
tokio-test = "0.4.3"
async_http_range_reader = "0.7.1"
actix-web = { version = "4.5.1", default-features = false }
tempfile = "3.10.1"
