[package]
name = "zippity"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/bluecube/zippity"
license = "MIT"
description = "Library for asynchronously creating a ZIP file on the fly."

[features]
default = ["tokio-file"]
tokio-file = ["dep:futures-util", "tokio/fs"]
bytes = ["dep:bytes", "dep:futures-core", "tokio-util/io"]
proptest = ["dep:proptest", "bytes", "dep:tempfile"]
actix-web = ["dep:actix-web", "bytes", "dep:http-range-header", "tokio/io-util"]
chrono = ["dep:chrono"]

[[example]]
name = "zip_directory"
required-features = ["tokio-file", "chrono"]

[dependencies]
actix-web = { version = "4.5.1", default-features = false, optional = true }
assert2 = "0.3.11"
bytes = { version = "1.6.0", optional = true }
crc32fast = "1.3.2"
futures-core = { version = "0.3.30", optional = true, default-features = false }
futures-util = { version = "0.3.30", optional = true, default-features = false }
http-range-header = { version = "0.4.0", optional = true }
indexmap = "2.2.6"
packed_struct = "0.10.1"
pin-project = "1.1.3"
proptest = { version = "1.3.1", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.32.0", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7.10", default-features = false}
tempfile = { version = "3.10.1", optional = true }
chrono = { version = "0.4.39", default-features = false, optional = true, features = ["std"] }

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.3.1"
test-strategy = "0.3.1"
zip = "0.6.6"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "io-util", "macros", "process"] }
tokio-test = "0.4.3"
async_http_range_reader = "0.7.1"
actix-web = { version = "4.5.1", default-features = false }
reqwest = "0.12.5"
actix-test = "0.1.5"
clap = { version = "4.5.16", features = ["derive"] }
walkdir = "2.5.0"
serde_json = "1.0.128"
test-case = "3.3.1"
chrono = { version = "0.4.39", features = ["std", "clock"] }
zippity = { path = ".", features = ["proptest"] }
  # TODO What a nice hack :)
  # See https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
