[package]
name = "zippity"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/bluecube/zippity"
license = "MIT"
description = "Library for asynchronously creating a ZIP file on the fly."

[features]
default = ["tokio-file"]
tokio-file = ["dep:futures-util", "tokio/fs"]
bytes = ["dep:bytes", "dep:futures-core", "tokio-util/io"]
actix-web = ["dep:actix-web", "bytes", "dep:http-range-header", "tokio/io-util"]
chrono = ["dep:chrono"]

[[example]]
name = "zip_directory"
required-features = ["tokio-file", "chrono"]

[[example]]
name = "web_server"
required-features = ["actix-web"]

[dependencies]
actix-web = { version = "4.5.1", default-features = false, optional = true }
assert2 = "0.3.11"
bytes = { version = "1.6.0", optional = true }
crc32fast = "1.3.2"
futures-core = { version = "0.3.30", optional = true, default-features = false }
futures-util = { version = "0.3.30", optional = true, default-features = false }
http-range-header = { version = "0.4.0", optional = true }
indexmap = "2.2.6"
packed_struct = "0.10.1"
pin-project = "1.1.3"
thiserror = "2.0.12"
tokio = { version = "1.32.0", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7.10", default-features = false}
chrono = { version = "0.4.39", default-features = false, optional = true, features = ["std"] }

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.3.1"
test-strategy = "0.3.1"
zip = "0.6.6"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "io-util", "macros", "process"] }
tokio-test = "0.4.3"
async_http_range_reader = "0.7.1"
actix-web = { version = "4.5.1", default-features = false, features = ["macros"]}
reqwest = "0.12.5"
actix-test = "0.1.5"
clap = { version = "4.5.16", features = ["derive"] }
walkdir = "2.5.0"
serde_json = "1.0.128"
tempfile = "3.10.1"
test-case = "3.3.1"
chrono = { version = "0.4.39", features = ["std", "clock"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "warn"
pedantic = "warn"
similar_names = {level = "allow", priority = 1}
must_use_candidate = {level = "allow", priority = 1}
explicit_deref_methods = {level = "allow", priority = 1} # This is allowed because of test_strategy `proptest` macro noise. TODO: set to warn again
default_trait_access = {level = "allow", priority = 1}
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }
